include(App)
include(Base)

include_directories(include)
include_directories(${CMAKE_SOURCE_DIR}/engine/log/include)

# headers
list(APPEND HEADERS include/g3d/AABox.h)
list(APPEND HEADERS include/g3d/AABSPTree.h)
list(APPEND HEADERS include/g3d/Array.h)
list(APPEND HEADERS include/g3d/BinaryFormat.h)
list(APPEND HEADERS include/g3d/BinaryInput.h)
list(APPEND HEADERS include/g3d/BinaryOutput.h)
list(APPEND HEADERS include/g3d/BoundsTrait.h)
list(APPEND HEADERS include/g3d/Box.h)
list(APPEND HEADERS include/g3d/BumpMapPreprocess.h)
list(APPEND HEADERS include/g3d/Capsule.h)
list(APPEND HEADERS include/g3d/CollisionDetection.h)
list(APPEND HEADERS include/g3d/Color1.h)
list(APPEND HEADERS include/g3d/Color1uint8.h)
list(APPEND HEADERS include/g3d/Color3.h)
list(APPEND HEADERS include/g3d/Color3uint8.h)
list(APPEND HEADERS include/g3d/Color4.h)
list(APPEND HEADERS include/g3d/Color4uint8.h)
list(APPEND HEADERS include/g3d/Cone.h)
list(APPEND HEADERS include/g3d/constants.h)
list(APPEND HEADERS include/g3d/ConvexPolyhedron.h)
list(APPEND HEADERS include/g3d/CoordinateFrame.h)
list(APPEND HEADERS include/g3d/Crypto.h)
list(APPEND HEADERS include/g3d/Cylinder.h)
list(APPEND HEADERS include/g3d/debug.h)
list(APPEND HEADERS include/g3d/debugAssert.h)
list(APPEND HEADERS include/g3d/debugPrintf.h)
list(APPEND HEADERS include/g3d/enumclass.h)
list(APPEND HEADERS include/g3d/EqualsTrait.h)
list(APPEND HEADERS include/g3d/fileutils.h)
list(APPEND HEADERS include/g3d/format.h)
list(APPEND HEADERS include/g3d/g3derror.h)
list(APPEND HEADERS include/g3d/g3dfnmatch.h)
list(APPEND HEADERS include/g3d/G3DGameUnits.h)
list(APPEND HEADERS include/g3d/g3dmath.h)
list(APPEND HEADERS include/g3d/GCamera.h)
list(APPEND HEADERS include/g3d/GImage.h)
list(APPEND HEADERS include/g3d/GLight.h)
list(APPEND HEADERS include/g3d/HashTrait.h)
list(APPEND HEADERS include/g3d/Image1.h)
list(APPEND HEADERS include/g3d/LightingParameters.h)
list(APPEND HEADERS include/g3d/Line.h)
list(APPEND HEADERS include/g3d/LineSegment.h)
list(APPEND HEADERS include/g3d/Map2D.h)
list(APPEND HEADERS include/g3d/Matrix2.h)
list(APPEND HEADERS include/g3d/Matrix3.h)
list(APPEND HEADERS include/g3d/Matrix4.h)
list(APPEND HEADERS include/g3d/MemoryManager.h)
list(APPEND HEADERS include/g3d/MeshAlg.h)
list(APPEND HEADERS include/g3d/MeshBuilder.h)
list(APPEND HEADERS include/g3d/ParseError.h)
list(APPEND HEADERS include/g3d/PhysicsFrame.h)
list(APPEND HEADERS include/g3d/Plane.h)
list(APPEND HEADERS include/g3d/platform.h)
list(APPEND HEADERS include/g3d/PositionTrait.h)
list(APPEND HEADERS include/g3d/Quat.h)
list(APPEND HEADERS include/g3d/Random.h)
list(APPEND HEADERS include/g3d/Ray.h)
list(APPEND HEADERS include/g3d/Rect2D.h)
list(APPEND HEADERS include/g3d/Set.h)
list(APPEND HEADERS include/g3d/SmallArray.h)
list(APPEND HEADERS include/g3d/Sphere.h)
list(APPEND HEADERS include/g3d/spline.h)
list(APPEND HEADERS include/g3d/stringutils.h)
list(APPEND HEADERS include/g3d/System.h)
list(APPEND HEADERS include/g3d/Table.h)
list(APPEND HEADERS include/g3d/Triangle.h)
list(APPEND HEADERS include/g3d/uint128.h)
list(APPEND HEADERS include/g3d/units.h)
list(APPEND HEADERS include/g3d/UprightFrame.h)
list(APPEND HEADERS include/g3d/Vector2.h)
list(APPEND HEADERS include/g3d/Vector2int16.h)
list(APPEND HEADERS include/g3d/Vector3.h)
list(APPEND HEADERS include/g3d/Vector3int16.h)
list(APPEND HEADERS include/g3d/Vector3int32.h)
list(APPEND HEADERS include/g3d/Vector4.h)
list(APPEND HEADERS include/g3d/Vector4int8.h)
list(APPEND HEADERS include/g3d/vectorMath.h)
list(APPEND HEADERS include/g3d/WrapMode.h)
list(APPEND HEADERS include/RbxG3D/RbxRay.h)
list(APPEND HEADERS include/RbxG3D/RbxTime.h)
list(APPEND HEADERS include/RbxG3D/Frustum.h)
list(APPEND HEADERS include/RbxG3D/RbxCamera.h)

# sources
list(APPEND SOURCES src/AABox.cpp)
list(APPEND SOURCES src/BinaryInput.cpp)
list(APPEND SOURCES src/BinaryOutput.cpp)
list(APPEND SOURCES src/Box.cpp)
list(APPEND SOURCES src/Capsule.cpp)
list(APPEND SOURCES src/CollisionDetection.cpp)
list(APPEND SOURCES src/Color3.cpp)
list(APPEND SOURCES src/Color3uint8.cpp)
list(APPEND SOURCES src/Color4.cpp)
list(APPEND SOURCES src/Color4uint8.cpp)
list(APPEND SOURCES src/CoordinateFrame.cpp)
list(APPEND SOURCES src/Crypto.cpp)
list(APPEND SOURCES src/Cylinder.cpp)
list(APPEND SOURCES src/debugAssert.cpp)
list(APPEND SOURCES src/fileutils.cpp)
list(APPEND SOURCES src/format.cpp)
list(APPEND SOURCES src/g3dfnmatch.cpp)
list(APPEND SOURCES src/g3dmath.cpp)
list(APPEND SOURCES src/GCamera.cpp)
list(APPEND SOURCES src/GImage.cpp)
list(APPEND SOURCES src/GImage_bayer.cpp)
list(APPEND SOURCES src/GImage_bmp.cpp)
list(APPEND SOURCES src/GImage_jpeg.cpp)
list(APPEND SOURCES src/GImage_png.cpp)
list(APPEND SOURCES src/GImage_tga.cpp)
list(APPEND SOURCES src/GLight.cpp)
list(APPEND SOURCES src/LightingParameters.cpp)
list(APPEND SOURCES src/Line.cpp)
list(APPEND SOURCES src/LineSegment.cpp)
list(APPEND SOURCES src/Matrix3.cpp)
list(APPEND SOURCES src/Matrix4.cpp)
list(APPEND SOURCES src/MemoryManager.cpp)
list(APPEND SOURCES src/PhysicsFrame.cpp)
list(APPEND SOURCES src/Plane.cpp)
list(APPEND SOURCES src/Quat.cpp)
list(APPEND SOURCES src/Random.cpp)
list(APPEND SOURCES src/Ray.cpp)
list(APPEND SOURCES src/Sphere.cpp)
list(APPEND SOURCES src/stringutils.cpp)
list(APPEND SOURCES src/System.cpp)
list(APPEND SOURCES src/Triangle.cpp)
list(APPEND SOURCES src/uint128.cpp)
list(APPEND SOURCES src/UprightFrame.cpp)
list(APPEND SOURCES src/Vector2.cpp)
list(APPEND SOURCES src/Vector2int16.cpp)
list(APPEND SOURCES src/Vector3.cpp)
list(APPEND SOURCES src/Vector3int16.cpp)
list(APPEND SOURCES src/Vector4.cpp)
list(APPEND SOURCES src/RbxCamera.cpp)
list(APPEND SOURCES src/Frustum.cpp)
list(APPEND SOURCES src/RbxRay.cpp)

add_library(G3D OBJECT ${SOURCES} ${HEADERS})
