include(App)

include_directories(include)
include_directories(${CMAKE_SOURCE_DIR}/engine/rendering/g3d/include)
include_directories(${CMAKE_SOURCE_DIR}/engine/rendering/app-draw/include)

list(APPEND HEADERS include/GfxBase/FrameRateManager.h)
list(APPEND HEADERS include/GfxBase/MeshGen.h)
list(APPEND HEADERS include/GfxBase/Adorn.h)
list(APPEND HEADERS include/GfxBase/Type.h)
list(APPEND HEADERS include/GfxBase/AdornSurface.h)
list(APPEND HEADERS include/GfxBase/RenderStats.h)
list(APPEND HEADERS include/GfxBase/MeshFileStructs.h)
list(APPEND HEADERS include/GfxBase/FileMeshData.h)
list(APPEND HEADERS include/GfxBase/RenderCaps.h)
list(APPEND HEADERS include/GfxBase/Part.h)
list(APPEND HEADERS include/GfxBase/IAdornable.h)
list(APPEND HEADERS include/GfxBase/GfxPart.h)
list(APPEND HEADERS include/GfxBase/ViewBase.h)
list(APPEND HEADERS include/GfxBase/RenderSettings.h)
list(APPEND HEADERS include/GfxBase/IAdornableCollector.h)
list(APPEND HEADERS include/GfxBase/Typesetter.h)
list(APPEND HEADERS include/GfxBase/TextureProxyBase.h)
list(APPEND HEADERS include/GfxBase/Image.h)
list(APPEND HEADERS include/GfxBase/AdornBillboarder.h)
list(APPEND HEADERS include/GfxBase/AdornBillboarder2D.h)
list(APPEND HEADERS include/GfxBase/ViewportBillboarder.h)
list(APPEND HEADERS include/GfxBase/PartIdentifier.h)
list(APPEND HEADERS include/GfxBase/AsyncResult.h)

list(APPEND SOURCES src/IAdornableCollector.cpp)
list(APPEND SOURCES src/RenderSettings.cpp)
list(APPEND SOURCES src/Adorn.cpp)
list(APPEND SOURCES src/RenderCaps.cpp)
list(APPEND SOURCES src/GfxPart.cpp)
list(APPEND SOURCES src/RenderStats.cpp)
list(APPEND SOURCES src/FileMeshData.cpp)
list(APPEND SOURCES src/PartIdentifier.cpp)
list(APPEND SOURCES src/AdornSurface.cpp)
list(APPEND SOURCES src/FrameRateManager.cpp)
list(APPEND SOURCES src/ViewBase.cpp)
list(APPEND SOURCES src/AdornBillboarder.cpp)
list(APPEND SOURCES src/AdornBillboarder2D.cpp)
list(APPEND SOURCES src/ViewportBillboarder.cpp)

add_library(GfxBase OBJECT ${SOURCES} ${HEADERS})