include(App)
include(Rendering)

include_directories(${CMAKE_SOURCE_DIR}/engine/client/shared)

#add_subdirectory(freetype)

add_definitions(-DFT2_BUILD_LIBRARY)

find_package(PkgConfig REQUIRED)
pkg_check_modules(FREETYPE REQUIRED freetype2)

list(APPEND HEADERS include/LightObject.h)
list(APPEND HEADERS include/VertexStreamer.h)
list(APPEND HEADERS include/ShaderManager.h)
list(APPEND HEADERS include/ParticleEmitter.h)
list(APPEND HEADERS include/Emitter.h)
list(APPEND HEADERS include/TextureRef.h)
list(APPEND HEADERS include/SceneManager.h)
list(APPEND HEADERS include/RenderNode.h)
list(APPEND HEADERS include/SSAO.h)
list(APPEND HEADERS include/MegaCluster.h)
list(APPEND HEADERS include/MaterialGenerator.h)
list(APPEND HEADERS include/TextureManager.h)
list(APPEND HEADERS include/RenderQueue.h)
list(APPEND HEADERS include/SpatialGrid.h)
list(APPEND HEADERS include/GlobalShaderData.h)
list(APPEND HEADERS include/TextureCompositor.h)
list(APPEND HEADERS include/RenderView.h)
list(APPEND HEADERS include/Sky.h)
list(APPEND HEADERS include/Util.h)
list(APPEND HEADERS include/Material.h)
list(APPEND HEADERS include/LightGrid.h)
list(APPEND HEADERS include/SpatialHashedScene.h)
list(APPEND HEADERS include/RenderCamera.h)
list(APPEND HEADERS include/Water.h)
list(APPEND HEADERS include/EmitterShared.h)
list(APPEND HEADERS include/GeometryGenerator.h)
list(APPEND HEADERS include/VisualEngine.h)
list(APPEND HEADERS include/SceneUpdater.h)
list(APPEND HEADERS include/ScreenSpaceEffect.h)
list(APPEND HEADERS include/Image.h)
list(APPEND HEADERS include/FastCluster.h)
list(APPEND HEADERS include/CullableSceneNode.h)
list(APPEND HEADERS include/AdornRender.h)
list(APPEND HEADERS include/SuperCluster.h)
list(APPEND HEADERS include/ObjectExporter.h)
list(APPEND HEADERS include/EnvMap.h)
list(APPEND HEADERS include/ExplosionEmitter.h)
list(APPEND HEADERS include/CustomEmitter.h)
list(APPEND HEADERS include/SmoothCluster.h)
list(APPEND HEADERS include/TextureAtlas.h)
list(APPEND HEADERS include/TypesetterDynamic.h)

list(APPEND SOURCES src/RenderQueue.cpp)
list(APPEND SOURCES src/RenderView.cpp)
list(APPEND SOURCES src/SpatialHashedScene.cpp)
list(APPEND SOURCES src/ParticleEmitter.cpp)
list(APPEND SOURCES src/TextureRef.cpp)
list(APPEND SOURCES src/GlobalShaderData.cpp)
list(APPEND SOURCES src/SSAO.cpp)
list(APPEND SOURCES src/RenderNode.cpp)
list(APPEND SOURCES src/Material.cpp)
list(APPEND SOURCES src/Image.cpp)
list(APPEND SOURCES src/CullableSceneNode.cpp)
list(APPEND SOURCES src/FastCluster.cpp)
list(APPEND SOURCES src/RenderCamera.cpp)
list(APPEND SOURCES src/TextureManager.cpp)
list(APPEND SOURCES src/LightGrid.cpp)
list(APPEND SOURCES src/MaterialGenerator.cpp)
list(APPEND SOURCES src/MegaCluster.cpp)
list(APPEND SOURCES src/TextureCompositor.cpp)
list(APPEND SOURCES src/GeometryGenerator.cpp)
list(APPEND SOURCES src/Sky.cpp)
list(APPEND SOURCES src/VertexStreamer.cpp)
list(APPEND SOURCES src/AdornRender.cpp)
list(APPEND SOURCES src/Water.cpp)
list(APPEND SOURCES src/Emitter.cpp)
list(APPEND SOURCES src/stdafx.cpp)
list(APPEND SOURCES src/LightObject.cpp)
list(APPEND SOURCES src/SceneManager.cpp)
list(APPEND SOURCES src/ScreenSpaceEffect.cpp)
list(APPEND SOURCES src/VisualEngine.cpp)
list(APPEND SOURCES src/ShaderManager.cpp)
list(APPEND SOURCES src/SceneUpdater.cpp)
list(APPEND SOURCES src/SuperCluster.cpp)
list(APPEND SOURCES src/ObjectExporter.cpp)
list(APPEND SOURCES src/EnvMap.cpp)
list(APPEND SOURCES src/ExplosionEmitter.cpp)
list(APPEND SOURCES src/CustomEmitter.cpp)
list(APPEND SOURCES src/SmoothCluster.cpp)
list(APPEND SOURCES src/TextureAtlas.cpp)
list(APPEND SOURCES src/TypesetterDynamic.cpp)

add_library(GfxRender OBJECT ${SOURCES} ${HEADERS})
target_include_directories(GfxRender PRIVATE ${FREETYPE_INCLUDE_DIRS})
target_link_libraries(GfxRender ${FREETYPE_LIBRARIES})
